# microservice-analysis-Alibaba

./: Cargo.toml  README.md  code.ipynb
alibaba_analysis/: LCC.ipynb  algo.ipynb  analysis24h.ipynb  code.ipynb  node_centric_24hr.ipynb  pagerank.ipynb  preprocess_load_to_raphtory.ipynb  regular_spikes_analysis.ipynb  temporal_diagrams.ipynb
alibaba_analysis/contact-sequence/: README.md  TemporalNetworkDiagram.ipynb
alibaba_analysis/distance_matrix/: example_pystates.py  pystates.py
alibaba_analysis/distance_matrix_analysis/: code.ipynb  convert_to_adjency_matrix.ipynb  distance_matrix_analysis.ipynb
alibaba_analysis/gradual_spike_analysis/: node_centric_24hr.ipynb  out_degree_analysis.ipynb
alibaba_analysis/regular_spikes_analysis/: cc_2.html  centrality.ipynb  connected_components.ipynb  gc.ipynb  hits.ipynb  important_node_subgraph.ipynb  initial_analysis.ipynb  nx_no_spike.html  nx_spike.html  top_10_pagerank_nodes.html  top_20_indegree_nodes.html  top_20_outdegree_nodes.html
src/: get_data_to_Raphtory.rs  main.rs
