[package]
name = "microservice-analysis-Alibaba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
flate2 = "1.0"
tar = "0.4"
rayon = "1.5"
serde = "1.0"
serde_derive = "1.0"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]

[[bin]]
name = "my_executable"
path = "src/main.rs"
