[package]
name = "microservice-analysis-Alibaba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = {version="1.3.0"}
tar = "0.4"
rayon = "1.5.1"
serde = "1.0"
serde_derive = "1.0"
raphtory = {version = "0.7.0", features = ["io"]}
zip = {version = "0.6", optional = true}
neo4rs = {version="0.6.1", optional=true}
bzip2 = {version="0.4", optional=true}
flate2 = "1.0"
serde_json = {version="1", optional=true}
reqwest = { version = "0.11.14", features = ["blocking"], optional=true}
tokio = { version = "1.27.0", features = ["full"], optional=true}

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]

[features]
default = []
# Enables the graph loader io module
io = ["dep:zip", "dep:neo4rs", "dep:bzip2", "dep:serde_json", "dep:reqwest", "dep:tokio"]

# Enables generating the pyo3 python bindings
#python = ["io", "dep:pyo3", "dep:pyo3-asyncio", "dep:num", "dep:display-error-chain", "dep:arrow2", "dep:kdam"]
# search
#search = ["dep:tantivy"]
# vectors
#vectors = ["dep:futures-util", "dep:async-trait", "dep:async-openai"]

[[bin]]
name = "my_executable"
path = "src/main.rs"

[[bin]]
name = "get_data_to_Raphtory"
path = "src/bin/get_data_to_Raphtory.rs"